<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_bottom_home"
        android:icon="@drawable/baseline_home_filled_24"
        android:title="@string/nav_bottom_home"/>
    <item
        android:id="@+id/nav_bottom_cart"
        android:icon="@drawable/baseline_shopping_bag_24"
        android:title="@string/nav_bottom_bag"/>
    <item
        android:id="@+id/nav_bottom_orders"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/nav_bottom_orders"/>
    <item
        android:id="@+id/nav_bottom_wallet"
        android:icon="@drawable/baseline_wallet_24"
        android:title="@string/nav_bottom_wallets"/>
    <item
        android:id="@+id/nav_bottom_person"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/nav_bottom_person"/>
</menu>