<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background_color"
    tools:context=".fragment.FillProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/baseline_keyboard_backspace_34"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/person_profile"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView12"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_edit_img"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cv_edit_img"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        app:cardCornerRadius="70dp">

                        <ImageView
                            android:id="@+id/iv_img"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/background_default_user" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        app:cardCornerRadius="5dp">

                        <ImageView
                            android:id="@+id/iv_edit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleX="0.7"
                            android:scaleY="0.7"
                            android:src="@drawable/edit_icon_black" />
                    </com.google.android.material.card.MaterialCardView>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/background_input_text"
                        android:hint="@string/user_username"
                        android:paddingStart="20dp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/background_input_text"
                        android:hint="@string/user_email"
                        android:paddingStart="20dp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/background_input_text"
                        android:hint="@string/user_phone"
                        android:paddingStart="20dp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_dob"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/background_input_text"
                        android:hint="@string/user_dob"
                        android:paddingStart="20dp" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/signup_btn_next"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_gravity="center"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>