<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background_color"
    tools:context=".fragment.AddAddressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:id="@+id/btn_back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_left"
                            android:src="@drawable/baseline_keyboard_backspace_34"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_left"
                            android:text="@string/address_add"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/btn_back"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_left"
                                android:layout_marginTop="5dp"
                                android:text="@string/user_username"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_username"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:layout_marginStart="@dimen/margin_left"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="@dimen/margin_right"
                                android:background="@drawable/background_input_text"
                                android:paddingStart="@dimen/input_padding" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_left"
                                android:layout_marginTop="5dp"
                                android:text="@string/user_phone"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_phone"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:layout_marginStart="@dimen/margin_left"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="@dimen/margin_right"
                                android:background="@drawable/background_input_text"
                                android:paddingStart="@dimen/input_padding" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_left"
                                android:layout_marginTop="5dp"
                                android:text="@string/address_province"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/tv_choose_address"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:layout_marginEnd="10dp"
                                    android:background="@drawable/background_input_text"
                                    android:paddingStart="@dimen/input_padding"
                                    android:paddingTop="10dp"
                                    android:paddingBottom="10dp"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHeight_min="55dp"
                                    app:layout_constraintStart_toStartOf="parent" />

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="15dp"
                                    android:src="@drawable/baseline_arrow_right_alt_24"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="@+id/tv_choose_address"
                                    app:layout_constraintTop_toTopOf="parent" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_left"
                                android:layout_marginTop="5dp"
                                android:text="@string/address_detail"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_detail"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:layout_marginStart="@dimen/margin_left"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="@dimen/margin_right"
                                android:background="@drawable/background_input_text"
                                android:paddingStart="@dimen/input_padding" />

                        </LinearLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp">

                            <TextView
                                android:id="@+id/textView22"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_left"
                                android:text="@string/address_type"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <RadioGroup
                                android:id="@+id/rg_type"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <RadioButton
                                    android:id="@+id/rb_home"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="@dimen/margin_right"
                                    android:text="@string/address_home"
                                    android:textColor="@color/white"
                                    android:textStyle="bold" />

                                <RadioButton
                                    android:id="@+id/rb_office"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="@dimen/margin_right"
                                    android:text="@string/address_office"
                                    android:textColor="@color/white"
                                    android:textStyle="bold" />
                            </RadioGroup>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            tools:ignore="UseSwitchCompatOrMaterialXml">

                            <TextView
                                android:id="@+id/textView23"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_left"
                                android:text="@string/address_default"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <Switch
                                android:id="@+id/switch_set_default"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/margin_right"
                                android:trackTint="@color/btn_orders"
                                android:trackTintMode="add"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:backgroundTint="@color/white"
            android:text="@string/completed"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />
    </LinearLayout>
</FrameLayout>